# setbinder.app

./: .gitignore  Cargo.toml  Dockerfile  Rocket.toml  build.rs
archidekt-provider/: Cargo.toml
archidekt-provider/src/: lib.rs
archidekt-provider/tests/: export.rs
models/: Cargo.toml
models/src/: lib.rs
provider/: Cargo.toml
provider/src/: lib.rs
rocket-app/: Cargo.toml  build.rs
rocket-app/src/: main.rs
rocket-app/templates/: index.html.hbs  layout.html.hbs  sets.html.hbs  style.css.hbs  theme.html.hbs
scryfall/: Cargo.toml  build.rs
scryfall/src/: lib.rs
src/: lib.rs  main.rs
static/: style.css
templates/: index.html.hbs  layout.html.hbs  sets.html.hbs
