[workspace]
resolver = '3'
members = [ "archidekt-provider", "models", "provider","rocket-app", "scryfall"]
[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0.145"
models = {path = "models"}
scryfall= {path = "scryfall"}
provider = {path = "provider"}
archidekt-provider = {path = "archidekt-provider"}
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"
lto = true
codegen-units = 1