[package]
name = "archidekt-provider"
version = "0.1.0"
edition = "2024"

[lib]
test=false
doctest = false

[dependencies]
models ={ workspace = true}
reqwest = {workspace = true}
serde = {workspace = true}
provider = {workspace = true}
futures = "0.3"
csv = "1.3.1"
anyhow = {workspace = true}

[dev-dependencies]
tokio = {workspace = true}