[package]
name = "rocket-app"
version = "0.1.0"
edition = "2024"

[[bin]]
name="setbinder"
path = "src/main.rs"
test = false
doctest = false


[build-dependencies]
lightningcss = "1.0.0-alpha.67"
path-slash="0.2"

[dependencies]
regex = "1.11.2"
reqwest = {workspace = true}
tokio = { workspace = true}
serde = { workspace = true}
serde_json = { workspace = true}
models = {workspace = true}
archidekt-provider = {workspace = true}
anyhow = {workspace = true}

[dependencies.rocket]
version="0.5.1"
#path = "D:\\source\\Rocket\\core\\lib"
git = "https://github.com/Thelonedevil/Rocket/"
branch = "v0.5"
[dependencies.rocket_dyn_templates]
version = "0.2.0"
#path = "D:\\source\\Rocket\\contrib\\dyn_templates"
git = "https://github.com/Thelonedevil/Rocket/"
branch = "v0.5"
features = ["handlebars"]

